--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Security: Content Security Policy -->
-    <!-- Allows scripts from self and Tailwind CDN. connects to Google GenAI. -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://generativelanguage.googleapis.com;">
-
     <!-- SEO & GEO Optimization -->
     <title>PaperMirror: AI Academic Style Transfer & Thesis Polisher (Free/Client-Side)</title>
     <meta name="title" content="PaperMirror: AI Academic Style Transfer & Thesis Polisher" />
     <meta name="description" content="Free AI tool for researchers. Transform drafts into Nature/Science style using Gemini 2.5 Pro. Privacy-focused, client-side, quantitative style transfer." />
-    <meta name="keywords" content="academic writing, style transfer, gemini ai, thesis editing, paper polisher, latex alternative, esl research tool, privacy focused ai, nature style, science style" />
+    <meta name="keywords" content="academic writing, style transfer, gemini ai, thesis editing, paper polisher, latex alternative, esl research tool, privacy focused ai" />
     
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
@@ -77,14 +73,6 @@
                 "@type": "Answer",
                 "text": "Yes. PaperMirror uses a client-side architecture. Your text is sent directly from your browser to Google's API. No intermediate server stores or views your data."
               }
-            },
-             {
-              "@type": "Question",
-              "name": "How does it differ from Grammarly?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Grammarly focuses on correctness. PaperMirror focuses on style transfer using quantitative metrics to mimic top-tier journals like Nature or Science."
-              }
             }
           ]
         }
@@ -92,19 +80,19 @@
     }
     </script>
 
-    <!-- Tailwind CSS via CDN (Allowed by CSP) -->
+    <!-- Tailwind CSS via CDN for simplicity in this setup (CSS build step optional) -->
     <script src="https://cdn.tailwindcss.com"></script>
 <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "marked": "https://aistudiocdn.com/marked@^17.0.0",
-    "dompurify": "https://aistudiocdn.com/dompurify@^3.3.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "vite": "https://aistudiocdn.com/vite@^7.2.2",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "marked": "https://aistudiocdn.com/marked@^17.0.0",
+    "dompurify": "https://aistudiocdn.com/dompurify@^3.3.0"
   }
 }
 </script>
