--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO & GEO Optimization -->
@@ -13,20 +13,20 @@
     
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://paper-mirror.vercel.app/" />
+    <meta property="og:url" content="https://zwtang119.github.io/PaperMirror/" />
     <meta property="og:title" content="PaperMirror: Turn Drafts into Top-Tier Journal Quality" />
     <meta property="og:description" content="Don't just fix grammar. Mirror the voice of top-tier journals. Quantitative analysis meets Generative AI. Free & Secure." />
-    <meta property="og:image" content="https://paper-mirror.vercel.app/og-image.png" />
+    <meta property="og:image" content="https://zwtang119.github.io/PaperMirror/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://paper-mirror.vercel.app/" />
+    <meta property="twitter:url" content="https://zwtang119.github.io/PaperMirror/" />
     <meta property="twitter:title" content="PaperMirror: AI Academic Style Transfer" />
     <meta property="twitter:description" content="Quantitative style analysis + Gemini 2.5 Pro for ESL researchers. Secure & Open Source." />
-    <meta property="twitter:image" content="https://paper-mirror.vercel.app/og-image.png" />
+    <meta property="twitter:image" content="https://zwtang119.github.io/PaperMirror/og-image.png" />
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://paper-mirror.vercel.app/" />
+    <link rel="canonical" href="https://zwtang119.github.io/PaperMirror/" />
 
     <!-- GEO: Structured Data for AI Search Engines -->
     <script type="application/ld+json">
@@ -80,19 +80,20 @@
     }
     </script>
 
-    <!-- Tailwind CSS via CDN for simplicity in this setup (CSS build step optional) -->
+    <!-- Tailwind CSS via CDN for simplicity in this setup -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="index.css">
 <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "marked": "https://aistudiocdn.com/marked@^17.0.0",
-    "dompurify": "https://aistudiocdn.com/dompurify@^3.3.0"
+    "dompurify": "https://aistudiocdn.com/dompurify@^3.3.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
@@ -100,6 +101,7 @@
 </head>
   <body class="bg-slate-50 text-slate-800">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+    <script type="module" src="index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
