--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     }
     </script>
 
+    <!-- Tailwind CSS via CDN for simplicity in this setup -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./index.css">
 <script type="importmap">
 {
