feat: 升级至 Gemini 3 并全面支持中文界面与 One-Shot 模式
1. 将默认模型升级为 gemini-3-flash-preview 以提升生成速度与智能。
2. 实现了完整的中文国际化，包括 UI 文本、错误提示及工具类注释。
3. 移除基于句子的分段重写模式，改为利用大上下文窗口的 One-Shot 全文重写。
4. 优化了加载状态页，增加针对长文档处理的动态提示语和动画。
5. 改进了结果展示页，增加一键复制功能并优化了移动端适配。
6. 更新 README 文档以反映最新的架构变化和隐私说明。

--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
 
     <!-- Tailwind CSS via CDN for simplicity in this setup -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            animation: {
+              'indeterminate-bar': 'indeterminate-bar 1.5s infinite linear',
+            },
+            keyframes: {
+              'indeterminate-bar': {
+                '0%': { transform: 'translateX(-100%)' },
+                '100%': { transform: 'translateX(300%)' },
+              }
+            }
+          }
+        }
+      }
+    </script>
     <link rel="stylesheet" href="./index.css">
 <script type="importmap">
 {
